@@ -27,6 +27,8 @@ ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 POSSIBILITY OF SUCH DAMAGE.
 */
 
+#define _GNU_SOURCE
+
 #include <config.h>
 
 #include <assert.h>
@@ -45,6 +47,10 @@ POSSIBILITY OF SUCH DAMAGE.
 #include <mosquitto_broker.h>
 #include <memory_mosq.h>
 #include <util_mosq.h>
+
+#ifndef POLLRDHUP
+#define POLLRDHUP POLLHUP
+#endif
 
 extern bool flag_reload;
 #ifdef WITH_PERSISTENCE
@@ -114,7 +120,7 @@ int mosquitto_main_loop(mosquitto_db *db, int *listensock, int listensock_count,
 					if(!(db->contexts[i]->keepalive) || db->contexts[i]->bridge || now - db->contexts[i]->last_msg_in < (time_t)(db->contexts[i]->keepalive)*3/2){
 						if(mqtt3_db_message_write(db->contexts[i]) == MOSQ_ERR_SUCCESS){
 							pollfds[pollfd_index].fd = db->contexts[i]->sock;
-							pollfds[pollfd_index].events = POLLIN;
+							pollfds[pollfd_index].events = POLLIN | POLLRDHUP;
 							pollfds[pollfd_index].revents = 0;
 							if(db->contexts[i]->out_packet){
 								pollfds[pollfd_index].events |= POLLOUT;
@@ -142,7 +148,7 @@ int mosquitto_main_loop(mosquitto_db *db, int *listensock, int listensock_count,
 								db->contexts[i]->bridge->restart_t = 0;
 								if(mqtt3_bridge_connect(db, db->contexts[i]) == MOSQ_ERR_SUCCESS){
 									pollfds[pollfd_index].fd = db->contexts[i]->sock;
-									pollfds[pollfd_index].events = POLLIN;
+									pollfds[pollfd_index].events = POLLIN | POLLRDHUP;
 									pollfds[pollfd_index].revents = 0;
 									if(db->contexts[i]->out_packet){
 										pollfds[pollfd_index].events |= POLLOUT;
@@ -234,6 +240,18 @@ int mosquitto_main_loop(mosquitto_db *db, int *listensock, int listensock_count,
 	return MOSQ_ERR_SUCCESS;
 }
 
+static void do_disconnect(mosquitto_db *db, int context_index)
+{
+	if(db->config->connection_messages == true){
+		if(db->contexts[context_index]->state != mosq_cs_disconnecting){
+			_mosquitto_log_printf(NULL, MOSQ_LOG_NOTICE, "Socket error on client %s, disconnecting.", db->contexts[context_index]->id);
+		}else{
+			_mosquitto_log_printf(NULL, MOSQ_LOG_NOTICE, "Client %s disconnected.", db->contexts[context_index]->id);
+		}
+	}
+	mqtt3_context_disconnect(db, context_index);
+}
+
 /* Error ocurred, probably an fd has been closed. 
  * Loop through and check them all.
  */
@@ -243,15 +261,8 @@ static void loop_handle_errors(mosquitto_db *db, struct pollfd *pollfds)
 
 	for(i=0; i<db->context_count; i++){
 		if(db->contexts[i] && db->contexts[i]->sock != INVALID_SOCKET){
-			if(pollfds[db->contexts[i]->pollfd_index].revents & POLLHUP){
-				if(db->config->connection_messages == true){
-					if(db->contexts[i]->state != mosq_cs_disconnecting){
-						_mosquitto_log_printf(NULL, MOSQ_LOG_NOTICE, "Socket error on client %s, disconnecting.", db->contexts[i]->id);
-					}else{
-						_mosquitto_log_printf(NULL, MOSQ_LOG_NOTICE, "Client %s disconnected.", db->contexts[i]->id);
-					}
-				}
-				mqtt3_context_disconnect(db, i);
+			if(pollfds[db->contexts[i]->pollfd_index].revents & (POLLHUP | POLLRDHUP | POLLERR | POLLNVAL)){
+				do_disconnect(db, i);
 			}
 		}
 	}
@@ -263,6 +274,12 @@ static void loop_handle_reads_writes(mosquitto_db *db, struct pollfd *pollfds)
 
 	for(i=0; i<db->context_count; i++){
 		if(db->contexts[i] && db->contexts[i]->sock != INVALID_SOCKET){
+			if(pollfds[db->contexts[i]->pollfd_index].revents & (POLLHUP | POLLRDHUP | POLLERR | POLLNVAL)){
+				do_disconnect(db, i);
+			}
+		}
+		if(db->contexts[i] && db->contexts[i]->sock != INVALID_SOCKET){
+		printf("i: %d %d\n", i, pollfds[db->contexts[i]->pollfd_index].revents);
 			assert(pollfds[db->contexts[i]->pollfd_index].fd == db->contexts[i]->sock);
 			if(pollfds[db->contexts[i]->pollfd_index].revents & POLLOUT){
 				if(_mosquitto_packet_write(db->contexts[i])){
